[package]
name = "f411"
version = "0.1.0"
authors = ["ntr <ntr@smokestack.io>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
l3gd20 = "0.3.0"
lsm303dlhc = "0.2.0"

# math for the thermistor Beta equation (ln) in no_std
libm = "0.2"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# panic-halt = "0.2.0"
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4]
version = "0.16.0"
features = ["stm32f411", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f411"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
